--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,14 +1,41 @@
-.container{
-    width: 100%;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.sub_container{
-    width: 80%;
-    display: flex;
-    flex: 1;
-    height: 100%;
+.app__card-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+
+  .app__card{
+      display: flex;
+      justify-content: flex-end;
+  }
+
+  .app__card-image {
+    width: 400px;
+    height: 300px;
+
+    
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.app__card-heart {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex: 1;
+
+
+  img{
+      height: 30px;
+      margin: 5px 8px 0px 0px;
+  }
+}
 }
