--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,3 +1,9 @@
+*{
+  margin : 0;
+  padding : 0;
+  box-sizing: border-box;
+
+}
 .app__navbar {
     width: 100%;
     display: flex;
@@ -5,6 +11,8 @@
     align-items: center;
     padding: 1rem 2rem;
     background-color: #F4F4F4;
+    position: fixed;
+    z-index: 2;
 
 
     .app__navbar-logo {
