--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -14,6 +14,9 @@
       display: flex;
       justify-content: flex-end;
 
+      @media screen and (max-width : 375px){
+        width: 350px;
+        }          
   };
 
   .app__card-image {
@@ -43,6 +46,7 @@
 
 .app__card-content{
   margin: 10px;
+  padding-bottom :20px;
 
   .app__card-details{
     font-size: 24px;
