--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -9,69 +9,64 @@
   flex-direction: column;
   margin-top: 10px;
 
+  .app__card {
+    display: flex;
+    justify-content: flex-end;
 
-  .app__card{
-      display: flex;
-      justify-content: flex-end;
-
-      @media screen and (max-width : 375px){
-        width: 350px;
-        }          
-  };
+    @media screen and (max-width: 375px) {
+      width: 350px;
+    }
+  }
 
   .app__card-image {
     width: 400px;
     height: 300px;
 
     img {
-        width: 100%;
-        height: 100%;
-        border-radius: 6px;
+      width: 100%;
+      height: 100%;
+      border-radius: 6px;
     }
-};
+  }
 
-.app__card-heart {
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  flex: 1;
+  .app__card-heart {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex: 1;
 
-
-  img{
+    img {
       height: 30px;
       margin: 5px 8px 0px 0px;
+    }
   }
-}
 
-.app__card-content{
-  margin: 10px;
-  padding-bottom :20px;
+  .app__card-content {
+    margin: 10px;
+    padding-bottom: 20px;
 
-  .app__card-details{
-    font-size: 24px;
-    font-weight: 600;
-    color: #2D2D2D;
-    padding-top : 5px;
+    .app__card-details {
+      font-size: 24px;
+      font-weight: 600;
+      color: #2d2d2d;
+      padding-top: 5px;
+    }
+    .app__card-price {
+      font-size: 28px;
+      font-weight: 800;
+      padding-top: 6px;
+    }
+    .app__card-address {
+      font-size: 16px;
+      font-weight: 500;
+      padding-top: 3px;
+    }
+    .app__card-date {
+      font-size: 16px;
+      font-weight: 500;
+      color: #979797;
+      padding-top: 2px;
+    }
   }
-  .app__card-price{
-    font-size: 28px;
-    font-weight: 800;
-    padding-top : 6px;
-
-  }
-  .app__card-address{
-    font-size: 16px;
-    font-weight: 500;
-    padding-top : 3px;
-
-  }
-  .app__card-date{
-    font-size: 16px;
-    font-weight: 500;
-    color: #979797;
-    padding-top : 2px;
-
-  }
-}
 }
