--- a/src/components/Pages/Home/Home.scss
+++ b/src/components/Pages/Home/Home.scss
@@ -1,16 +1,6 @@
-.check{
-    // display: grid;
-    // grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
-    // grid-column-gap: 6rem;
-    // grid-row-gap: 2rem;
-    // place-items: center;
+.app__home-container{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding-top: 80px;
-}
-
-.check1{
-    display: flex;
-    flex-direction:column
 }
